# winexec

./: .gitignore  CMakeLists.txt  NOTICE
include/: IntSafe.h  basetsd.h  errhandlingapi.h  minwinbase.h  ntdef.h  processthreadapi.h  str.h  types.h  utf.h  windef.h  winnt.h  winternl.h
include/lib/: common.h  utils.h
src/: CMakeLists.txt  main.c
src/advapi32/: CMakeLists.txt  main.c
src/apphelp/: CMakeLists.txt
src/clbcatq/: CMakeLists.txt
src/comctl32/: CMakeLists.txt  main.c
src/comdlg32/: CMakeLists.txt  main.c
src/cryptbase/: CMakeLists.txt
src/dwmapi/: CMakeLists.txt
src/gdi32/: CMakeLists.txt  main.c
src/kernel32/: CMakeLists.txt  kernel32.h  main.c
src/loaderlib/: CMakeLists.txt  entry.c  entry.h  exports.c  exports.h  headers.h  imports.c  imports.h  loader.c  loader.h  loaderlib.h  main.c  mapper.c  mapper.h  relocs.c  relocs.h  tls.c  tls.h
src/msvcrt/: CMakeLists.txt  main.c
src/netapi32/: CMakeLists.txt  main.c
src/ntmarta/: CMakeLists.txt
src/ole32/: CMakeLists.txt  main.c
src/oleacc/: CMakeLists.txt
src/oleaut32/: CMakeLists.txt  main.c
src/printlib/: CMakeLists.txt  print.h  vfprintf_musl.c  vfwprintf_musl.c
src/propsys/: CMakeLists.txt
src/riched20/: CMakeLists.txt
src/setupapi/: CMakeLists.txt
src/shell32/: CMakeLists.txt  main.c
src/shfolder/: CMakeLists.txt  main.c
src/shlwapi/: CMakeLists.txt  main.c
src/user32/: CMakeLists.txt  main.c
src/userenv/: CMakeLists.txt
src/uxtheme/: CMakeLists.txt
src/version/: CMakeLists.txt  main.c
