add_subdirectory(advapi32)
add_subdirectory(comctl32)
add_subdirectory(kernel32)
add_subdirectory(msvcrt)
add_subdirectory(netapi32)
add_subdirectory(oleaut32)
add_subdirectory(user32)
add_subdirectory(gdi32)
add_subdirectory(shell32)
add_subdirectory(ole32)
add_subdirectory(printlib)
add_subdirectory(loaderlib)
add_subdirectory(uxtheme)
add_subdirectory(userenv)
add_subdirectory(setupapi)
add_subdirectory(apphelp)
add_subdirectory(propsys)
add_subdirectory(dwmapi)
add_subdirectory(cryptbase)
add_subdirectory(oleacc)
add_subdirectory(clbcatq)
add_subdirectory(ntmarta)
add_subdirectory(version)
add_subdirectory(shfolder)
add_subdirectory(shlwapi)
add_subdirectory(riched20)
add_subdirectory(comdlg32)